# structure_tensors

./: CMakeLists.txt  mean_and_standart_deviation.h  st_via_convolution.h  st_visualization.h  st_weird.h
data/: negative_test_poles_features.csv  negative_train_poles_features.csv  positive_train_poles_features.csv  test.csv  train.csv
date/: positive_test_poles_features.csv
demo/: main.cpp
ipython_notebooks/: ExtractFeatures.ipynb  FilterPolesBySize.ipynb
src/: mean_and_standart_deviation.cpp  st_visualization.cpp  st_weird.cpp  structure_tensors.cpp
